--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         // 🔧 CONFIGURAÇÃO - PERSONALIZE AQUI!
         const CONFIG = {
             // Link do seu canal do YouTube (OBRIGATÓRIO)
-            youtubeChannel: "https://www.youtube.com/@MrJhefy",
+            youtubeChannel: "https://www.youtube.com/@MrJhefy/videos",
             
             // Link que será liberado (OBRIGATÓRIO)
             protectedLink: "https://www.mediafire.com/file/qks0qrpndp4lw1c/%25F0%259D%2590%25AD%25F0%259D%2590%259E%25F0%259D%2590%25B1%25F0%259D%2590%25AD%25F0%259D%2590%25AE%25F0%259D%2590%25AB%25F0%259D%2590%259A%25F0%259D%2590%25AC%252C%25F0%259D%2590%25A6%25F0%259D%2590%25A8%25F0%259D%2590%259D%25F0%259D%2590%25A9%25F0%259D%2590%259A%25F0%259D%2590%259C%25F0%259D%2590%25A4_%25F0%259D%2590%259E_%25F0%259D%2590%25AC%25F0%259D%2590%25A1%25F0%259D%2590%259A%25F0%259D%2590%259D%25F0%259D%2590%259E%25F0%259D%2590%25AB%25F0%259D%2590%25AC.zip/file",
@@ -344,7 +344,7 @@
             channelName: "MrJhefy",
             
             // Simular estatísticas (opcional)
-            simulatedUsers: "1.2K",
+            simulatedUsers: "0",
             simulatedTime: "15min"
         };
 
